Related: tdf#131157 inherit ScDrawTransferObj from TransferDataContainer

Change-Id: I5119b959a6bff958582c404c03af59bd52c9497a