sc/source/ui/inc/drwtrans.hxx
@@ -35,7 +35,7 @@ class ScDrawView;
 class SdrOle2Obj;
 enum class ScDragSrc;
 
-class ScDrawTransferObj : public TransferableHelper
+class ScDrawTransferObj : public TransferDataContainer
 {
 private:
     std::unique_ptr<SdrModel>       m_pModel;
